bk_ida/gccida/g3/initializer_constant_valid_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4775:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4776:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4782:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r10 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4785:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4805:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v3 = lang_hooks_0.expand_constant( value); 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4805:34: error: called object type '<dependent type>' is not a function or function pointer
v3 = lang_hooks_0.expand_constant( value); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4830:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v28) & 0xFFFFFFF9) != 1 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4830:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v28) & 0xFFFFFFF9) != 1 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4846:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v31) & 0xFFFFFFF9) != 1 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4846:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v31) & 0xFFFFFFF9) != 1 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4864:19: error: expected expression
v7 = ( tree_node *)*( &global_trees + 14); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4864:8: error: use of undeclared identifier 'tree_node'
v7 = ( tree_node *)*( &global_trees + 14); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4937:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 14) != v7 ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4937:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 14) != v7 ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4981:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v3 = lang_hooks_0.expand_constant( v3->vector.elements); 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4981:34: error: called object type '<dependent type>' is not a function or function pointer
v3 = lang_hooks_0.expand_constant( v3->vector.elements); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4999:19: error: expected expression
v7 = ( tree_node *)*( &global_trees + 14); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:4999:8: error: use of undeclared identifier 'tree_node'
v7 = ( tree_node *)*( &global_trees + 14); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/varasm.c:5019:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 14) == v7 ) 
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/initializer_constant_valid_p/src/obj/varasm.o] Error 1
